kubevela/ingress-kubevela.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubevela-ingress
  namespace: vela-system 
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls: 
  - secretName: kubevela-ssl
    hosts:
    - kubevela.seedslabs.io
  rules:
  - host: kubevela.seedslabs.io
    http:
      paths:
      - backend:
          service:
            name: kubevela-cluster-gateway-service 
            port:
              number: 9443
        path: /
        pathType: Prefix
